--- a/updatescript.ini
+++ b/updatescript.ini
@@ -26,16 +26,16 @@ Build A841 (Offical Release){
 
 Build A214-2 (Offical Release){
 
-DownloadFile:BigB.png,https://sites.google.com/site/sc2mcvue/home/updates/BigB.png
+DownloadFile:BigB.png,https://github.com/asimmons1107/VUEServ/raw/master/Updates/BigB.png
 CopyFile: BigB.png,%userprofile%\Pictures\camcam\
 
-DownloadFile:meme5.PNG,https://sites.google.com/site/sc2mcvue/home/updates/meme5.PNG
+DownloadFile:meme5.PNG,https://github.com/asimmons1107/VUEServ/raw/master/Updates/meme5.PNG
 CopyFile: meme5.PNG,%userprofile%\Pictures\camcam\
 
-DownloadFile:oh come on man.JPG, https://sites.google.com/site/sc2mcvue/home/updates/oh%20come%20on%20man.JPG
+DownloadFile:oh come on man.JPG, https://github.com/asimmons1107/VUEServ/raw/master/Updates/oh%20come%20on%20man.JPG
 CopyFile: oh come on man.JPG,%userprofile%\Pictures\camcam\
 
-DownloadFile:oh come on man.JPG, https://sites.google.com/site/sc2mcvue/home/updates/oh%20het.png?attredirects=0&d=1
+DownloadFile:oh come on man.JPG, https://github.com/asimmons1107/VUEServ/raw/master/Updates/oh%20het.png?attredirects=0&d=1
 CopyFile:oh shet,%userprofile%\Pictures\camcam\
 
 }
@@ -43,32 +43,33 @@ CopyFile:oh shet,%userprofile%\Pictures\camcam\
 
 Build A833-2 (Offical Release){
 
-DownloadFile:BigB.png,https://sites.google.com/site/sc2mcvue/home/updates/BigB.png
+DownloadFile:BigB.png,https://github.com/asimmons1107/VUEServ/raw/master/Updates/BigB.png
 CopyFile: BigB.png,%userprofile%\Pictures\camcam\
 
-DownloadFile:meme5.PNG,https://sites.google.com/site/sc2mcvue/home/updates/meme5.PNG
+DownloadFile:meme5.PNG,https://github.com/asimmons1107/VUEServ/raw/master/Updates/meme5.PNG
 CopyFile: meme5.PNG,%userprofile%\Pictures\camcam\
 
-DownloadFile:oh come on man.JPG, https://sites.google.com/site/sc2mcvue/home/updates/oh%20come%20on%20man.JPG
+DownloadFile:oh come on man.JPG, https://github.com/asimmons1107/VUEServ/raw/master/Updates/oh%20come%20on%20man.JPG
 CopyFile: oh come on man.JPG,%userprofile%\Pictures\camcam\
 
-DownloadFile:oh come on man.JPG, https://sites.google.com/site/sc2mcvue/home/updates/oh%20het.png?attredirects=0&d=1
+DownloadFile:oh come on man.JPG, https://github.com/asimmons1107/VUEServ/raw/master/Updates/oh%20het.png?attredirects=0&d=1
 CopyFile:oh shet,%userprofile%\Pictures\camcam\
 
 }
 
 Build A841-2 (Offical Release){
 
-DownloadFile:BigB.png,https://sites.google.com/site/sc2mcvue/home/updates/BigB.png
+DownloadFile:BigB.png,https://github.com/asimmons1107/VUEServ/raw/master/Updates/BigB.png
 CopyFile: BigB.png,%userprofile%\Pictures\camcam\
 
-DownloadFile:meme5.PNG,https://sites.google.com/site/sc2mcvue/home/updates/meme5.PNG
+DownloadFile:meme5.PNG,https://github.com/asimmons1107/VUEServ/raw/master/Updates/meme5.PNG
 CopyFile: meme5.PNG,%userprofile%\Pictures\camcam\
 
-DownloadFile:oh come on man.JPG, https://sites.google.com/site/sc2mcvue/home/updates/oh%20come%20on%20man.JPG
+DownloadFile:oh come on man.JPG, https://github.com/asimmons1107/VUEServ/raw/master/Updates/oh%20come%20on%20man.JPG
 CopyFile: oh come on man.JPG,%userprofile%\Pictures\camcam\
 
-DownloadFile:oh come on man.JPG, https://sites.google.com/site/sc2mcvue/home/updates/oh%20het.png?attredirects=0&d=1
+DownloadFile:oh come on man.JPG, https://github.com/asimmons1107/VUEServ/raw/master/Updates/oh%20het.png?attredirects=0&d=1
 CopyFile:oh shet,%userprofile%\Pictures\camcam\
+
 
 }
