--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+# Welcome
+This is where the Visual Update Express can pull all the lovely memes we have for you. Without the hassle. Admin permission is needed
